--- a/style.css
+++ b/style.css
@@ -14,3 +14,9 @@ main {
 footer {
   margin-top: 2rem;
 }
+.hero-header {
+  background-image: url('your-image.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
