--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ footer {
   margin-top: 2rem;
 }
 .hero-header {
-  background-image: url('https://images.unsplash.com/photo-1503676260728-1c00da094a0b');
+  background-image: url('https://img.jagranjosh.com/imported/images/E/Articles/new%20skill%20featuresssssss.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
