--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ footer {
   margin-top: 2rem;
 }
 .hero-header {
-  background-image: url('https://img.jagranjosh.com/imported/images/E/Articles/new%20skill%20featuresssssss.jpg');
+  background-image: url('https://www.manillenials.com/wp-content/uploads/2020/10/learn-new-skills-at-home.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
